# upasthiti_api

./: .env.demo  .gitignore  Procfile  README.MD  README.md  back.json  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: paginator.py  response_serializers.py  serializers.py  urls.py  utils.py  views.py
attendance/: admin.py  filters.py  models.py  serializers.py  views.py
attendance/migrations/: 0001_initial.py  0002_alter_attendancemodel_student.py  0002_rename_is_last_attendancemodel_is_late.py  0003_remove_attendancemodel_classes_and_more.py  0004_attendancemodel_classes.py  0005_remove_attendancemodel_classes.py  0006_attendancemodel_for_class.py
authlogic/: apps.py  views.py
class/: models.py
classes/: admin.py  filters.py  models.py  serializers.py  views.py
classes/migrations/: 0001_initial.py  0002_alter_classesmodel_options_and_more.py  0003_alter_classesmodel_student.py  0004_rename_classesmodel_classmodel.py  (+2 more)
college/: admin.py  models.py  response_serializers.py  serializers.py  views.py
contact/: admin.py  models.py  serializers.py  views.py
course/: admin.py  models.py  serializers.py  views.py
department/: admin.py  filters.py  models.py  serializers.py  views.py
logs/: README.md
student/: admin.py  filters.py  models.py  serializers.py  views.py
teacher/: admin.py  models.py
university/: admin.py  models.py  serializers.py  views.py
upasthiti/: asgi.py  settings.py  urls.py  wsgi.py
user/: admin.py  filters.py  forms.py  managers.py  models.py  permissions.py  serializers.py  views.py
(+76 files in other folders)
